<resources>
    <string name="app_name">GSMDetector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bsss">BSSS</string>
    <string name="gps">GPS:</string>
    <string name="lac">LAC</string>
    <string name="date">Date:</string>
    <string name="model">Model:</string>
    <string name="location_rationale">This app needs your location to know where you are.</string>
    <string name="action">Action</string>
    <string name="mark_my_location">My Location</string>
    <string name="mark_custom_location">Custom Location</string>
    <string name="mark_gps_location">GPS Location</string>
    <string name="mark_multi_locations">Multi Locations</string>
    <string name="title_latitude">Latitude:</string>
    <string name="title_longitude">Longitude:</string>
    <string name="pseudo_cell_base">Pseudo Cell Base #</string>
    <string name="network_type">Type</string>
    <string name="cid">CID</string>
    <string name="location">Location</string>
    <string name="update_global_info">Update Global Info</string>
</resources>
