<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.GlobalInfoFragment">

    <Button
        android:id="@+id/update_global_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_global_info"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/gsm_data_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/gps" />

    <TextView
        android:id="@+id/gsm_data_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/gsm_data_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/model" />

    <ListView
        android:id="@+id/gsm_cell_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary" />

</LinearLayout>
